# ROS2-tactile-sensor-project

./: .gitignore  readme.md  sss
install/: local_setup.sh  setup.sh
install/tactile_sensor_ros2/lib/tactile_sensor_ros2/: cap_read_node  data_subscriber
install/tactile_sensor_ros2/share/tactile_sensor_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tactile_sensor_ros2/share/tactile_sensor_ros2/launch/: tactile_sensor_launch.py
log/: latest_build
src/tactile_sensor_ros2/: setup.cfg  setup.py
src/tactile_sensor_ros2/launch/: tactile_sensor_launch.py
src/tactile_sensor_ros2/tactile_sensor_ros2/: cap_read_node.py  class_ch341.py  class_finger.py  class_sensorcmd.py  data_subscriber_node.py  finger_log_setting.py  sensorPara.py
src/tactile_sensor_ros2/tactile_sensor_ros2/lib/ch341/CH341PAR_LINUX/driver/: .gitignore
